fix: update test-action-required-inputs.yml to include pom-file input

--- a/.github/workflows/test-action-required-inputs.yml
+++ b/.github/workflows/test-action-required-inputs.yml
@@ -9,3 +9,5 @@ jobs:
 
       - name: Execute Composite Action
         uses: ./ # Usa la acción desde el repositorio actual
+        with:
+          pom-file: test-action/pom.xml
